# seabattle_backend

./: .coverage  .env  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: asgi.py  celery.py  middlewares.py  settings.py  urls.py  utilities.py  yasg.py
src/: urls.py
src/game/: admin.py  apps.py  consumers.py  db_queries.py  filters.py  models.py  permissions.py  routings.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/game/bots/: bot_interfaces.py  bot_levels.py  bot_logic.py  bot_message.py  bot_mixins.py  db_queries.py
src/game/bots/test/: test_bot_levels.py  test_bot_logic.py  test_bot_message.py  test_db_queries.py
src/game/celery_tasks/: services.py  tasks.py
src/game/celery_tasks/test/: test_services.py  test_tasks.py
src/game/consumers/: bot_mixins.py  consumers.py  db_queries.py  mixins.py  services.py
src/game/consumers/addspace/: add_space.py
src/game/consumers/test/: data.py  test_add_space.py  test_consumers.py  test_data.json  test_data.py  test_mixins.py  (+2 more)
src/game/templates/: index.html
src/game/test/: test_filters.py  test_models.py  test_permissions.py  test_serializers.py  test_services.py  test_views.py
src/user/: admin.py  apps.py  db_queries.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
src/user/auth/: backends.py  models.py  oauth_views.py  urls.py
src/user/celery_tasks/: tasks.py
src/user/test/: test_db_queries.py  test_models.py  test_permissions.py  test_serializers.py  test_services.py  test_views.py
(+2 files in other folders)
