[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lanterman <splen1011@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
channels = "^4.0.0"
django-debug-toolbar = "^3.8.1"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
pillow = "^9.3.0"
coverage = "^7.0.1"
django-filter = "^23.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
django-cors-headers = "^3.13.0"
daphne = "^4.0.0"
redis = "4.5.4"
django = "4.2"
channels-redis = "4.1.0"
celery = "5.3.0b2"
PyJWT = "^2.7.0"
django-oauth-toolkit = "^2.3.0"
drf-social-oauth2 = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
